<resources>
    <string name="app_name">AppStoreLatest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_media_list">MediaListActivity</string>
    <string name="title_activity_app_details">AppDetails</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="audiobook_label">Audio Book</string>
    <string name="books_labek">Books</string>
    <string name="macapp_lable">MAC Apps</string>
    <string name="itunes_lable">iTunes U</string>
    <string name="iosapp_label">iOS Apps</string>
    <string name="podcast_label">Podcast</string>
    <string name="tvshows_lable">TV Shows</string>
</resources>
